# yhl_proj

./: README.md
SLAM_learning/: VINSMONO学习笔记.docx
SLAM_learning/LKoptical_flow/: CMakeLists.txt  LK.cpp
SLAM_learning/feature_match/: 2d_2d.cpp  CMakeLists.txt  extraction  extraction.cpp
SLAM_learning/opencv_img/: CMakeLists.txt  imgBasic.cpp
SLAM_learning/point_cloud/: CMakeLists.txt  joinmap  joinmap.cpp
cnn_vhdl/PyTorch_BNN/: data.py  main_binary.py  preprocess.py  utils.py
cnn_vhdl/PyTorch_BNN/models/: __init__.py  alexnet_binary.py  binarized_modules.py
cnn_vhdl/PyTorch_BNN/to_hex/: noproblem.hex  number.py  pic.py
cnn_vhdl/rtl_cnn/: cnn.vhd  conv.vhd  conv_maxpool.vhd  full_connect.vhd  top_control.vhd
esp32_nn_sr_tts/: CMakeLists.txt  partitions.csv  sdkconfig
esp32_nn_sr_tts/imu_cnn/: CNN_train.py  Serial_Read.py  data_pre.py  minist.py
esp32_nn_sr_tts/imu_cnn/track/: CMakeLists.txt  track.cpp  track.py
esp32_nn_sr_tts/main/: CMakeLists.txt  I2S.code-workspace  blink_example_main.c  idf_component.yml
esp32_nn_sr_tts/main/I2S/: I2Sto.c  I2Sto.h
infant_cry_detec/: restart.sh
infant_cry_detec/SoundClassification/: component.py  ecapa.py  hparams.yaml  lstm.py  proposed_model.py  resnet.py  train.py
infant_cry_detec/SoundClassification/ablation/: no_ADM.py  no_CCA.py  no_ESA.py  no_MULTI.py
infant_cry_detec/SoundClassification/data/audio/: readme.md
infant_cry_detec/SoundClassification/data/metadata/: all28479.csv  noise.csv  noise_v.csv
infant_cry_detec/SoundClassification/deprecated/: Xvector.py  mymodel.py  mymodel2.py
infant_cry_detec/SoundClassification/manifest/: train.json  valid.json
infant_cry_detec/SoundClassification/utils/: addnoise.py  confusion_matrix_fig.py  cut.py  make_csv_aug.py  mono_track.py  mycsv.py  select.py  spec.py
infant_cry_detec/results/2000/: hyperparams.yaml  log.txt  train_log.txt  train_resnet.py
infant_cry_detec/results/2000/save/: label_encoder.txt
infant_cry_detec/results/2000/save/CKPT+2025-02-14+05-21-07+00/: CKPT.yaml  brain.ckpt
infant_cry_detec/results/2000/save/CKPT+2025-02-14+06-13-29+00/: CKPT.yaml  brain.ckpt
infant_cry_detec/results/2000/save/CKPT+2025-02-14+06-23-37+00/: CKPT.yaml  brain.ckpt
infant_cry_detec/results/2000/save/CKPT+2025-02-14+06-40-33+00/: CKPT.yaml  brain.ckpt
infant_cry_detec/results/2000/save/CKPT+2025-02-14+06-42-14+00/: CKPT.yaml  brain.ckpt
infant_cry_detec/results/2000/save/CKPT+2025-02-14+06-43-57+00/: CKPT.yaml  brain.ckpt  classifier.ckpt
pytorch_learning/torchaudio/: IO.py  data_aug.py  feature_extract.py  pipeline_wav2vec.py  pre_emphasis.py  resample.py  streaming.py
pytorch_learning/torchvision/: README.md  custom_func.py  paper.md  predict.py  requirements.txt  test.py  train.py  window.py
pytorch_learning/torchvision/references/official_reference/: intro_pytorch.py  intro_tensorboard.py
pytorch_learning/torchvision/references/other_reference/: data_split.py
spine_reg/ICP/: AndersonAcceleration.h  FRICP.h  ICP.h  Types.h  io_pc.h  main.cpp  median.h  nanoflann.hpp  visualize.py
spine_reg/nets/: train.py  unet.py  unet_def.py  unet_training.py
spine_reg/nets/utils/: json_to_dataset.py
spine_reg/utils/: dicom2png.py  sym.py  to_cloud.py
